# Causal-Diamond-Engine

./: .dockerignore  .editorconfig  .env.example  .eslintrc.cjs  .gitattributes  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CONTRIBUTORS.md
.github/workflows/: ci.yml  docker.yml  docs.yml  python.yml  rust.yml  train-eval.yaml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
configs/: ledger.default.yaml  tool-versions.txt
configs/data/: catalog.example.yaml
configs/data/mixtures/: base_mix.yaml
configs/eval/: kill_numbers.yaml  thresholds.toy.json
configs/models/: fm-b-220m.json  fm-toy.json  foundation-7b.yaml
configs/serving/: .gitkeep
configs/train/: default.yaml  pretrain_v0.yaml  pretrain_v1.yaml  toy_ddp.yaml  toy_local.yaml
cpp/: CMakeLists.txt
cpp/kernels/: null_stability.cu
data/: catalog.toy.yaml  catalog.yaml
data/sp_text/: tokenizer.model  tokenizer.vocab
docs/: ARCHITECTURE.md  DEV_SETUP.md  EVALUATION.md  MODEL_CARD.md  OPERATIONS.md  SAFETY_CARD.md
engine/: Cargo.toml
engine/bindings/python/: Cargo.toml  pyproject.toml
engine/bindings/python/src/: lib.rs
engine/src/: config.rs  errors.rs  frw.rs  lib.rs  runtime.rs  stability.rs  telemetry.rs
engine/src/diamond/: mod.rs
engine/src/entanglement/: mod.rs
engine/src/geometry/: mod.rs
engine/src/io/: mod.rs  simple.rs
engine/src/ledger/: mod.rs
engine/src/modal/: gaussian.rs  mod.rs  pointer.rs
engine/src/stability/: mod.rs
engine/src/utils/: integrate.rs  linalg.rs  mod.rs  stencil.rs
infra/: README.md
model/: pyproject.toml
model/fm_bindings/: Cargo.toml  __init__.py  pyproject.toml
model/fm_bindings/src/: lib.rs
model/fm_core/: __init__.py  checkpoint.py  config.py  flash_attn_wrapper.py  planner_head.py  projection.py  rope.py  transformer.py
model/fm_data/: __init__.py  catalog.py  packing.py  webdataset_stream.py
model/fm_eval/: __init__.py  runner.py
model/fm_kernels/: __init__.py  setup.py
model/fm_rag/: __init__.py
model/fm_serving/: __init__.py
model/fm_train/: __init__.py  cli.py  config.py  gate.py  objectives.py  runtime.py
model/fm_train/datasets/: __init__.py  catalog.py  filters.py
model/fm_train/losses/: __init__.py  stability.py
model/fm_train/trainer/: __init__.py  run.py  scheduler.py
ops/ci/: README.md
ops/deploy/: README.md
ops/eval/: README.md
python/: __init__.py
python/datasets/: __init__.py  catalog.py  filters.py
python/losses/: __init__.py  modal.py
python/notebooks/: __init__.py
python/trainer/: __init__.py  run.py  scheduler.py
scripts/: bootstrap.sh  detect_os.sh  setup_system_linux-arch.sh  setup_system_linux-fedora.sh  setup_system_linux-ubuntu.sh  setup_system_macos.sh  setup_system_windows-msys.sh  train_and_eval.sh
serving/python/: __init__.py
serving/python/server/: Cargo.toml
serving/python/src/: __init__.py  app.py
serving/rust/: Cargo.toml
serving/rust/src/: main.rs
tests/: test_trainer.py
tests/integration/: test_cli.py  test_serving.py  test_training_flow.py
tests/unit/: test_bindings_import.py  test_engine_bindings.py  test_modal_loss.py  test_workspace_imports.py
tokenizer/: README.md  corpus_manifest.yaml
tokenizer/scripts/: build_corpus.py  lock_and_prune.py  make_corpus.sh  preprocess_indents.py  train_sentencepiece.py  train_sentencepiece.sh
tokenizer/seeds/: seed_sentences.txt
tokenizer/symbols/: control_symbols.txt  user_defined_symbols.txt
web/docs-site/: package.json  tsconfig.json
web/ui/: .eslintrc.cjs  index.html  package.json  tsconfig.json
web/ui/src/: main.tsx
