[workspace]
members = [
    "engine",
    "apps/cli",
    "serving/python/server",
    "model/fm_bindings",
    "serving/rust"
]
resolver = "2"

[workspace.package]
authors = ["Reality's Ledger Team <dev@realitysledger.org>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/realitysledger/causal-diamond-engine"
