[package]
name = "engine"
version = "0.1.0"
edition = "2021"
description = "Causal-diamond reasoning core"
authors = ["Reality's Ledger Team <dev@realitysledger.org>"]
license = "MIT"
repository = "https://github.com/realitysledger/causal-diamond-engine"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
uuid = { version = "1.7", features = ["v4", "serde"] }
rayon = "=1.6.1"
rayon-core = "=1.10.1"
parking_lot = "0.12"
num_cpus = "1.16"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
sprs = "0.11"
ndarray = { version = "0.15", features = ["serde"] }
itertools = "0.13"
metrics = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"
approx = "0.5"
once_cell = "1.19"

[features]
default = ["gaussian_ledger", "frw_map"]
gpu = ["tch"]
gaussian_ledger = []
pointer_ledger = []
frw_map = []

[dependencies.tch]
version = "0.13"
optional = true
default-features = false
features = ["download-libtorch"]

[dev-dependencies]
proptest = "1.4"
serde_json = "1"
