[package]
name = "serving"
version = "0.0.1"
edition = "2021"
authors = ["Reality's Ledger Team <dev@realitysledger.org>"]
description = "Axum serving shim for foundation runtime"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
